@@ -407,6 +407,28 @@ end
 
 task :rf => :rubyfiles
 
+desc "build util/gem_prelude.rb from the template and defaults.rb"
+file 'util/gem_prelude.rb' =>
+     %w[util/gem_prelude.rb.template lib/rubygems/defaults.rb] do
+  gem_prelude = File.read 'util/gem_prelude.rb.template'
+  defaults = File.read 'lib/rubygems/defaults.rb'
+
+  raise 'template error' unless defaults.sub!(/^module Gem\n/, '')
+  raise 'template error' unless defaults.sub!(/^end\n/, '')
+
+  defaults.gsub!(/^/, '  ')
+
+  raise 'template error' unless
+    gem_prelude.sub!(/^# WARN\n/,
+                     "# THIS FILE WAS AUTOGENERATED, DO NOT EDIT\n")
+  raise 'template error' unless
+    gem_prelude.sub!(/^    # INCLUDE rubygems\/defaults\n/, defaults)
+
+  open 'util/gem_prelude.rb', 'w' do |io|
+    io.write gem_prelude
+  end
+end
+
 # These tasks expect to have the following directory structure:
 #
 #   git/git.rubini.us/code # Rubinius git HEAD checkout
